# OOP_Project_Qt_designer

./: Action.cpp  Action.h  CMakeLists.txt  DynamicArr.cpp  DynamicArr.h  FileBasket.cpp  FileBasket.h  GUI.cpp  GUI.h  README.md  Repo.cpp  Repo.h  RepositoryExceptions.cpp  RepositoryExceptions.h  Services.cpp  Services.h  TableModel.cpp  TableModel.h  UI.cpp  UI.h  Utils.cpp  coat.cpp  coat.h  coats.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shopping_basket.cpp  shopping_basket.h  tests.cpp  tests.h
Domain/: Action.cpp  Action.h  DynamicArr.cpp  DynamicArr.h  TableModel.cpp  TableModel.h  coat.cpp  coat.h  shopping_basket.cpp  shopping_basket.h
Files/: coats.txt
GUI/: GUI.cpp  GUI.h
Repository/: FileBasket.cpp  FileBasket.h  Repo.cpp  Repo.h  RepositoryExceptions.cpp  RepositoryExceptions.h
Service/: Services.cpp  Services.h
Test/: tests.cpp  tests.h
UI/: UI.cpp  UI.h
